22.2.13 Actions log scrollbar fix
#5152

--- a/style/22.2.13.css
+++ b/style/22.2.13.css
@@ -6,3 +6,8 @@
 .rgh-clean-repo-sidebar .Layout-sidebar [href$='#readme'] {
 	display: none !important;
 }
+
+/* https://github.com/refined-github/refined-github/issues/5152 */
+:root .CheckStep-line .CheckStep-line-content {
+	overflow: visible;
+}
